--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -42,7 +42,8 @@
 
     {{> home/javascript }}
     
-    
+    <-->d3 Selection</-->
+    <script src="https://d3js.org/d3-selection.v1.min.js"></script>
     
     <!--pathfinding js -->
     <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
@@ -56,7 +57,6 @@
     <!--lodash.js-->
     <script src="lodash/lodash.js"></script>
 
-     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js" charset="utf-8"></script>
     <!-- Navigation Script tag !-->
     <script>
