--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -41,48 +41,25 @@
     <!-- /#wrapper -->
 
     {{> home/javascript }}
-    
-    <-->d3 Selection</-->
-    <script src="https://d3js.org/d3-selection.v1.min.js"></script>
-    
-    <!--pathfinding js -->
-    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
 
-    <!-- Navigation js -->
-    <script src="../../../public/javascripts/navigation-main.js"></script>
-    
-    <!--d3.js-->
-    <script src="/d3/build/d3.min.js"></script>
-
-    <!--lodash.js-->
-    <script src="lodash/lodash.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js" charset="utf-8"></script>
-    <!-- Navigation Script tag !-->
-    <script>
-        /*(function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-48705802-2', 'auto');
-        ga('send', 'pageview');*/
-    </script>
-    
-    
-
-    {{> dashboard/javascript }}
     <!-- MetisMenu js -->
     <script src='/metismenu/metisMenu.min.js'></script>
 
     <!-- Dashboard js -->
     <script src='/public/javascripts/dashboard-admin.js'></script>
+
+    <!-- Pathfinding js -->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
+
+    <!-- Navigation js -->
+    <script src="/public/javascripts/navigation-main.js"></script>
+    
+    <!-- D3 js -->
+    <script src="/d3/build/d3.min.js"></script>
+
+    <!-- Lodash js -->
+    <script src="lodash/lodash.js"></script>
+
+
 
 </body>
