--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -104,6 +104,7 @@
                                     </div>
 
                                     <div class="form-group" id="map-group">
+                                        <section id='drawn' position="absolute"></section>
                                         <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg">
                                             Your browser does not support SVG
                                         </object>
@@ -133,7 +134,7 @@
     {{> dashboard/javascript }}
 
     <script src="/d3/build/d3.min.js"></script>
-    <script src="/public/javascripts/render-map.js"></script>
+    <script src="/public/javascripts/draw-poly.js"></script>
     <script src="/public/javascripts/form-submit.js" ></script>
 
 
