--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -14,9 +14,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <button id="setWalkTrue">set walkable</button>
-                        <button id="setWalkFalse">set unwalkable</button>
-                        <button id="hideGrid">hide Grid</button>
+                        <button class="btn" id="loadGrid">Load Grid</button>
+                        <button style="display:none" class="btn" id="setWalkTrue">set walkable</button>
+                        <button style="display:none" class="btn" id="setWalkFalse">set unwalkable</button>
+                        <button style="display:none" class="btn" id="hideGrid">hide Grid</button>
                         <div id="map-group" style=" display:flex">
                             <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
                                 Your browser does not support SVG
