--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -134,9 +134,9 @@
     {{> dashboard/javascript }}
     <script src="/d3/build/d3.min.js"></script>
      <script src="/lodash/lodash.js"></script>
-    <script src="/public/javascripts/draw-polygon.js"></script>
-     <script src="/public/javascripts/render-polygons.js"></script>
-    <script src="/public/javascripts/form-submit.js" ></script>
+     <!----<script src="/public/javascripts/draw-polygon.js"></script> -->
+    <script src="/public/javascripts/render-polygons.js"></script>
+     <script src="/public/javascripts/form-submit.js" ></script>
 
 
 
