--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -104,9 +104,9 @@
                                     </div>
 
                                     <div class="form-group" id="map-group">
-                                        <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg">
-                                            Your browser does not support SVG
-                                        </object>
+                                        <div id="map-wrapper">
+
+                                        </div>
                                     </div> <!-- / .form-group !-->
 
                                 </div> <!-- / .col-lg-12 !-->
@@ -133,8 +133,8 @@
     {{> dashboard/javascript }}
 
     <script src="/d3/build/d3.min.js"></script>
-    <script src="/public/javascripts/render-map.js"></script>
-    <script src="/public/javascripts/form-submit.js" ></script>
+    <!--<script src="/public/javascripts/render-map.js"></script>-->
+    <script src="/public/javascripts/form-control.js" ></script>
 
 
 
