--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -15,9 +15,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <button class="btn" id="loadGrid">Load Grid</button>
-                        <button style="display:none" class="btn" id="setWalkTrue">set walkable</button>
-                        <button style="display:none" class="btn" id="setWalkFalse">set unwalkable</button>
-                        <button style="display:none" class="btn" id="hideGrid">hide Grid</button>
+                        <button style="display:none"  class="btn" id="navLine">Nav Line</button>
+                        <button style="display:none" class="btn" id="setWalkTrue">Set Walkable</button>
+                        <button style="display:none" class="btn" id="setWalkFalse">Set Unwalkable</button>
+                        <button style="display:none" class="btn" id="hideGrid">Hide Grid</button>
+                        <button style="display:none" class="btn" id="saveGrid">Save Grid</button>
                         <div id="map-group" style=" display:flex">
                             <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
                                 Your browser does not support SVG
