--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -96,10 +96,12 @@
                                     
                                     <!-- Map Control !-->
                                     <div class="row" id="map-control">
-                                        <div class="col-lg-12">
-                                            <div class="btn btn-default" id="btn-draw">Draw</div>
-                                            <div class="btn btn-primary" id="btn-fill">Fill</div>
-                                            <div class="btn btn-warning" id="btn-clear">Clear</div>
+                                        <div class="col-lg-6">
+                                            <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
+                                            <div class="btn btn-default" id="btn-location-select">Select Location</div>
+                                            <!--<div class="btn btn-default" id="btn-draw">Draw</div>-->
+                                            <!--<div class="btn btn-primary" id="btn-fill">Fill</div>-->
+                                            <!--<div class="btn btn-warning" id="btn-clear">Clear</div>-->
                                         </div>
                                     </div>
                                     <div class="form-group" id="map-group">
