--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -16,14 +16,16 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
+                          <div id="navGrid">
+                                <section id="grid" style="position:absolute"></section>
+                        </div>
                         <div id="map-wrapper">
+                               
                         <div id="map-group" style=" display:flex">
                             <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
                                 Your browser does not support SVG
                             </object>
-                            <section id="grid" style="position:absolute"></section>
                         </div> <!-- / #map-group !-->
-
                         <div id="mapDiv" style="display:flex">
 
                         </div>
