--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -37,14 +37,14 @@ body {
 
 #page-wrapper {
     padding: 0 15px;
-    min-height: calc(100% - 50px);
+    /*min-height: calc(100% - 50px);*/
     background-color: white;
     padding-bottom: 20px;
 }
 
 @media (min-width: 768px) {
     #page-wrapper {
-        min-height: calc(100% - 100px);
+        /*min-height: calc(100% - 100px);*/
         position: inherit;
         margin: 0 0 0 215px;
         padding: 0 30px;
