--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -20,12 +20,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">Defining Navigaiton Grid</h1>
-                           <div id="map-group" style=" display:flex">
-                            <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
-                                Your browser does not support SVG
-                            </object>
-                            <section id="grid" style="position:absolute"></section>
-                        </div> <!-- / #map-group !-->
+
                     </div> <!-- /.col-lg-12 -->
                 </div> <!-- /.row -->
 
@@ -72,6 +67,16 @@
 
                 </div> <!-- /.row !-->
 
+                <div class="row">
+                    <!-- Map & Grid !-->
+                    <div class="form-group" id="map-group">
+                        <section id="grid" style="position:absolute"></section>
+
+                        <div id="map-wrapper">
+
+                        </div>
+                    </div> <!-- / Map & Grid !-->
+                </div>
 
             </div>
             <!-- /.container-fluid -->
@@ -91,6 +96,6 @@
 
     <script src="../../public/javascripts/navigation-main.js"></script>
     <script src="../../public/javascripts/control-navigation.js"></script>
-    
+
 
 </body>
